<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/download_file"
        android:icon="@drawable/download"
        android:title="@string/download_file"
        app:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/open_file"
        android:icon="@drawable/folder"
        android:title="@string/open_file"
        app:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/reindex_files"
        android:title="@string/reindex_puzzle_files"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/settings"
        android:icon="@drawable/settings"
        android:title="@string/title_activity_settings"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/show_tutorial"
        android:title="@string/show_tutorial"
        app:showAsAction="never" />

    <item
        android:id="@+id/send_feedback"
        android:title="@string/send_feedback"
        app:showAsAction="never" />
</menu>